fix(products) - Added the less file

--- a/client/app/index.less
+++ b/client/app/index.less
@@ -28,6 +28,7 @@
 @import "superdesk-monitoring/styles/monitoring.less";
 @import "superdesk-packaging/packaging.less";
 @import "superdesk-planning/styles/planning.less";
+@import "superdesk-products/styles/products.less";
 @import "superdesk-publish/styles/publish.less";
 @import "superdesk-search/styles/search.less";
 @import "superdesk-settings/styles/settings.less";
