[SD-4591]-(fix) - Integrated editor2 to aap branch

--- a/client/app/index.less
+++ b/client/app/index.less
@@ -42,3 +42,5 @@
 @import "superdesk/menu/styles/menu.less";
 @import "superdesk/notify/styles/notify.less";
 @import "superdesk/upload/styles/upload.less";
+
+@import "superdesk/editor2/styles.less";
