--- a/client/app/index.less
+++ b/client/app/index.less
@@ -44,3 +44,4 @@
 @import "superdesk/upload/styles/upload.less";
 
 @import "superdesk/editor2/styles.less";
+@import "superdesk-workspace/content/styles/profiles.less";
