Less file added to index.less

--- a/client/app/index.less
+++ b/client/app/index.less
@@ -11,6 +11,7 @@
 @import "superdesk-authoring/versioning/versions/versions.less";
 @import "superdesk-authoring/widgets/widgets-article.less";
 @import "superdesk-content-filters/styles/content-filters.less";
+@import "superdesk-workspace/content/styles/profiles.less";
 @import "superdesk-dashboard/styles/dashboard.less";
 @import "superdesk-dashboard/workspace-tasks/styles/tasks.less";
 @import "superdesk-dashboard/world-clock/world-clock.less";
