--- a/client/ansa/styles.scss
+++ b/client/ansa/styles.scss
@@ -34,6 +34,12 @@
 .metasearch {
     .main-section {
         overflow-y: scroll;
+        padding: 10px 20px;
+
+        .main {
+            min-height: 1%;
+            overflow: hidden;
+        }
 
         .stage {
             padding: 8px 18px 3px;
