--- a/client/ansa/views/ansa-metasearch-dropdown.html
+++ b/client/ansa/views/ansa-metasearch-dropdown.html
@@ -1,6 +1,6 @@
 <div class="dropdown strict" dropdown>
-    <button class="navbtn dropdown-toggle dropdown__toggle" dropdown-toggle>
-        <i class="big-icon--cog"></i>
+    <button class="navbtn dropdown-toggle dropdown__toggle" dropdown-toggle style="margin-left:-1px;">
+        <i class="icon-switches"></i>
     </button>
     <ul class="dropdown__menu dropdown--align-right">
         <li ng-repeat="cat in metasearch.categories track by cat._id">
