--- a/client/ansa/styles.scss
+++ b/client/ansa/styles.scss
@@ -1,30 +1,24 @@
 .widget-ansa-semantics {
-    .badge-header {
-        clear: both;
-        padding: 8px 0 3px;
+    .tag-list {
+        margin: 0;
+        .tag-label {
+            margin-right: 0.4rem;
+        }
+        .tag-label + .tag-label {
+            margin-left: 0;
+        }
     }
-
-    .badge {
-        float: left;
-        clear: left;
-        position: relative;
-        padding: 5px 20px 5px 5px;
-
-        font-size: 1.3rem;
-        text-transform: none;
-
-        color: inherit;
-        background: inherit;
-
-        button {
-            position: absolute;
-            bottom: 8px;
-            right: 5px;
-            width: 13px;
-            height: 13px;
-            line-height: 13px;
-            border: none;
-            background: transparent;
+    .tag-list__header {
+        padding: 1rem 0 0.5rem;
+        font-size: 1.4rem;
+        font-weight: 500;
+    }
+    .tag-list__text-block {
+        margin-left: 0;
+        p {
+            font-size: 1.3rem;
+            line-height: 150%;
+            margin-bottom: 1em;
         }
     }
 }
@@ -35,20 +29,13 @@
     .main-section {
         overflow-y: scroll;
         padding: 10px 20px;
-
         .main {
             min-height: 1%;
             overflow: hidden;
         }
-
-        .stage {
-            padding: 8px 18px 3px;
-        }
-
         .engine {
             opacity: .8;
         }
-
         figure {
             margin: 3px 0;
             overflow: hidden;
@@ -59,16 +46,36 @@
                 padding-right: 8px;
             }
         }
-
         .embed.iframe {
             margin: 3px 0;
         }
-
         .pills-list {
             clear: both;
             padding-top: 10px;
+            max-width: none;
+        }
+        .main-section {
+            position: static;
+            overflow-y: visible;
+            padding: 0;
         }
     }
+    .sd-list-item-group {
+        margin: 1rem 0;
+    }
+    .sd-list-item {
+        p {
+            font-size: 1.4rem;
+            line-height: 140%;
+        }
+        h3 {
+            font-size: 1.6rem;
+            line-height: 120%;
+            margin: 0.2rem 0 0.7rem;
+        }
+    }
+
+
 
     #search-input {
         flex-grow: 1;
@@ -76,10 +83,22 @@
 }
 
 #ansa-related-widget {
-    .btn-group {
+    .btn-group, .button-list {
         position: fixed;
         top: 106px;
         right: 61px;
+        z-index: 999;
+        overflow: visible;
+    }
+    .collapsed-content {
+        padding: 0 0 0 1.2rem;
+        border-left:4px solid rgba(0,0,0,0.15); 
+        margin: 0.6rem 0 0 0.2rem;
+        p {
+            a {
+                word-break: break-all;
+            }
+        }
     }
 }
 
@@ -87,4 +106,22 @@
     width: 340px;
     margin-top: 8px;
     margin-left: -320px;
+}
+
+.suggestion-link-list {
+    a {
+        display: inline-block;
+        font-size: 1.4rem;
+        font-weight: 300;
+        margin-right: 1rem;
+        padding: 0.2rem 0;
+    }
+}
+
+// Live Assistant
+
+.main-section.live-suggestions {
+    .main:last-child {
+        margin-bottom: 3rem;
+    }
 }
