--- a/client/ansa/views/workspace-sidenav-items.html
+++ b/client/ansa/views/workspace-sidenav-items.html
@@ -89,7 +89,7 @@
 <li ng-class="{active: currentRoute.href === '/workspace/metasearch'}">
     <a href="#/workspace/metasearch" class="sd-sidebar-menu__btn" title="Metasearch"
       ng-click="hideMonitoring(currentRoute.href === '/workspace/metasearch', $event)">
-        <i class="big-icon--web sd-sidebar-menu__main-icon"></i>
+        <i class="big-icon--meta-search sd-sidebar-menu__main-icon"></i>
         <i class="big-icon--chevron-left sd-sidebar-menu__helper-icon"></i>
     </a>
 </li>
@@ -97,7 +97,7 @@
 <li ng-class="{active: currentRoute.href === '/workspace/assistant'}">
     <a href="#/workspace/assistant" class="sd-sidebar-menu__btn" title="Live assistant"
       ng-click="hideMonitoring(currentRoute.href === '/workspace/assistant', $event)">
-        <i class="big-icon--web sd-sidebar-menu__main-icon"></i>
+        <i class="big-icon--live sd-sidebar-menu__main-icon"></i>
         <i class="big-icon--chevron-left sd-sidebar-menu__helper-icon"></i>
     </a>
 </li>
