--- a/client/ansa/closed-desk/views/close-desk-widget.html
+++ b/client/ansa/closed-desk/views/close-desk-widget.html
@@ -1,14 +1,4 @@
 <div class="close-desk-widget-content" ng-controller="RoutingWidgetController as routing">
-    <div class="sd-line-input sd-line-input--is-select">
-        <label class="sd-line-input__label">Route incoming content to</label>
-        <select class="sd-line-input__select"
-            ng-options="d._id as d.name for d in routing.desks"
-            ng-model="routing.destination"
-            ng-change="routing.updateDestination()"
-            ng-disabled="!routing.canManage"
-        ></select>
-    </div>
-
     <div class="sd-line-input" ng-if="routing.routedFrom.length">
         <label class="sd-line-input__label">Routed from</label>
         <div class="sd-list-item-group">
@@ -28,14 +18,25 @@
 
     <div class="space-eater"></div>
 
+    <div class="sd-line-input sd-line-input--is-select">
+        <label class="sd-line-input__label">Route incoming content to</label>
+        <select class="sd-line-input__select"
+            ng-options="d._id as d.name for d in routing.desks"
+            ng-model="routing.destination"
+            ng-change="routing.updateDestination()"
+            ng-disabled="!routing.canManage"
+        ></select>
+    </div>
+
     <button class="btn btn--large btn--success btn--expanded"
         ng-if="!routing.desk.is_closed"
-        ng-disabled="!routing.destination"
+        ng-disabled="!routing.destination || !routing.canManage"
         ng-click="routing.toggle()">
         Start routing
     </button>
     <button class="btn btn--large btn--alert btn--expanded"
         ng-if="routing.desk.is_closed"
+        ng-disabled="!routing.canManage"
         ng-click="routing.toggle()">
         Stop routing
     </button>
