[SDANSA-183] Create image for Desk Router widget

--- a/client/ansa/closed-desk/styles.scss
+++ b/client/ansa/closed-desk/styles.scss
@@ -12,3 +12,13 @@
         flex-grow: 1;
     }
 }
+
+$widget_close-desk: #e55028;
+
+.widget-list li.widget.close-desk .thumbnail {
+    background-color: $widget_close-desk;
+}
+
+.widget-detail .thumbnail-box.close-desk {
+    background-color: $widget_close-desk;
+}
