--- a/client/ansa/styles.scss
+++ b/client/ansa/styles.scss
@@ -100,6 +100,9 @@
             }
         }
     }
+    .set-related-btn-group {
+        margin-top: 5px;
+    }
 }
 
 .dropdown__menu.desk-notification-list {
