--- a/client/ansa/closed-desk/styles.scss
+++ b/client/ansa/closed-desk/styles.scss
@@ -7,9 +7,14 @@
     left: 8px;
     display: flex;
     flex-direction: column;
+    overflow: auto;
 
     .space-eater {
         flex-grow: 1;
+    }
+
+    .simple-list {
+        padding: 0;
     }
 }
 
