fix missing back button in live assistant
SDANSA-226

--- a/client/ansa/views/ansa-live-suggestions.html
+++ b/client/ansa/views/ansa-live-suggestions.html
@@ -4,9 +4,9 @@
 
 <div class="subnav" ng-if="searchEnabled">
     <div class="flat-searchbar monitoring-backlink">
-        <div class="search-handler">
-            <button sd-tooltip="Back to original view" flow="right" class="backlink" ng-click="closeSearch()"></button>
-        </div>
+        <button sd-tooltip="Back to original view" flow="right" class="navbtn navbtn--left" ng-click="closeSearch()">
+            <i class="icon-arrow-left"></i>
+        </button>
     </div>
     <div class="flat-searchbar extended">
         <div class="search-handler">
