--- a/client/ansa/styles.scss
+++ b/client/ansa/styles.scss
@@ -138,6 +138,7 @@
     letter-spacing: 0.02rem;
     font-weight: 500;
     color: #555;
+    padding-right: 1.6rem;
 }
 
 .compact-view .media-box .item-info .line {
