fix ansa map menu item
SDANSA-234

--- a/client/ansa/views/ansa-map.html
+++ b/client/ansa/views/ansa-map.html
@@ -1,7 +1,8 @@
-<div class="modal__header modal__header--flex">
-    <h3 class="modal__heading">Superdesk aiNews</h3>
-    <button class="icn-btn modal__close" ng-click="$close($event)"><i class="icon-close-small"></i></button>
-</div>
-<div class="modal__body modal__body--no-padding modal__body--relative">
-    <iframe class="ansa-map" src="https://factsmap.ansa.it/factsMap/index.shtml" frameborder="0"></iframe>
+<div class="metasearch monitoring">
+    <div class="subnav">
+        <h3 class="subnav__page-title">Superdesk aiNews</h3>
+    </div>
+    <section class="main-section">
+        <iframe class="ansa-map" src="https://factsmap.ansa.it/factsMap/index.shtml" frameborder="0"></iframe>
+    </section>
 </div>
