--- a/client/ansa/views/ansa-map.html
+++ b/client/ansa/views/ansa-map.html
@@ -2,7 +2,7 @@
     <div class="subnav">
         <h3 class="subnav__page-title">Superdesk aiNews</h3>
     </div>
-    <section class="main-section">
+    <section class="main-section map">
         <iframe class="ansa-map" src="https://factsmap.ansa.it/factsMap/index.shtml" frameborder="0"></iframe>
     </section>
 </div>
